# Usticky

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  index.html  package.json  pnpm-lock.yaml  settings.html  tsconfig.json  vite.config.ts
.github/: RELEASE_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
scripts/: generate_icons.py  sync-version.cjs
src/: assets.d.ts  main.ts  settings.css  settings.ts  styles.css
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json  global.json
src-tauri/icons/: icon.icns
src-tauri/locales/: en.json  zh-CN.json
src-tauri/src/: lib.rs  main.rs  todo.rs  tray.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src/i18n/: en.json  index.ts  zh-CN.json
